[package]
name = "curs"
version = "0.1.1"
authors = ["Nubis <yo@nubis.im>"]
description = "Hyper HTTP client lib, feels more like curl. Supports file Uploads."
repository = "https://github.com/bitex-la/rust-curs"
keywords = ["http", "api", "client", "web", "multipart"]
license = "WTFPL"

[dependencies]
hyper = "0.7.2"
url = "=0.5.5"
serde = "0.7"
serde_json = "0.7"
serde_macros = "0.7.2"
rand = "0.3.14"
mime_guess = "=1.4.0"

[dev-dependencies]
http_stub = "0.1.2"
