[package]
name = "curs"
version = "0.1.2"
authors = ["Nubis <yo@nubis.im>"]
description = "Hyper HTTP client lib, feels more like curl. Supports file Uploads."
repository = "https://github.com/bitex-la/rust-curs"
keywords = ["http", "api", "client", "web", "multipart"]
license = "WTFPL"

[dependencies]
hyper = "0.7.2"
url = "=0.5.5"
serde = { version = "^0.8.0", git = "https://github.com/nubis/serde" }
serde_macros = { version = "^0.8.0", git = "https://github.com/nubis/serde" }
serde_json = { version = "^0.8.0", git = "https://github.com/nubis/json" }
rand = "0.3.14"
mime_guess = "=1.4.0"

[dev-dependencies]
http_stub = "0.1.2"
